--- a/index.html
+++ b/index.html
@@ -35,11 +35,9 @@
       <span id="maior-valor"></span>
     </h3>
 
-    <div id="chute" class="mensagem">
-      <div>Você disse:</div>
-      <span class="box">20</span>
-      <div>O numero secreto é maior <i class="fa-solid fa-arrow-up"></i></div>
-    </div>
+    <div id="chute" class="mensagem"></div>
   </body>
   <script src="main.js"></script>
+  <script src="voiceSpeech.js"></script>
+  <script src="validacao.js"></script>
 </html>
